k8s/standalone/mental-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mental-service
  namespace: healthlife
spec:
  selector:
    app: mental-service
  ports:
    - port: 80
      targetPort: 8084
      protocol: TCP
  type: ClusterIP
